--- a/templates/about.html
+++ b/templates/about.html
@@ -25,6 +25,7 @@
                 <li>Gautam Patil (Front End, Back End, Database, Deployment)</li>
                 <li>Shrinivas Narhare (Front End, , Design, UI/UX)</li>
                 <li>Ajay Pandit ( Security, Hosting)</li>
+                <li>Gunjan Kawale (Front End)</li>
             </ul>
             </div>
             <div class="providers">
@@ -35,6 +36,7 @@
                 <li>Saloni Parab</li>
                 <li>Ajay Pandit</li>
                 <li>Gautam Patil</li>
+                <li>Rudraksh Raut</li>
             </ul>
             </div>
         </div>
