--- a/templates/footer.html
+++ b/templates/footer.html
@@ -8,7 +8,7 @@
         </span></span>
         <nav>
             <ul>
-                <li><a href="#" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a></li>
+                <li><a href="https://github.com/GautamPatil1/FYMaterials" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a></li>
                 <li><a href="https://discord.gg/D2qUB9JA" target="_blank"><i class="fa-brands fa-discord fa-2x"></i></a></li>
             </ul>
         </nav>
